; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_core_namemap.c_ossl_namemap_name2num.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_core_namemap.c_ossl_namemap_name2num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ossl_namemap_name2num(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %15

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @strlen(i8* %12)
  %14 = call i32 @ossl_namemap_name2num_n(i32* %10, i8* %11, i32 %13)
  store i32 %14, i32* %3, align 4
  br label %15

15:                                               ; preds = %9, %8
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @ossl_namemap_name2num_n(i32*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
